# mcud

./: .gitmessage  API.h  CMakeLists.txt  build.sh  mcud.c  mcud_exec.c  mcud_exec.h  version.c  version.h
CONSOLE/: console.c  console.h
FILECOMMAND/: filecommand.c  filecommand.h
